Nav, Portafolio, About y Contact listos, falta Footer y funcionalidades tipo Bootstrap.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,91 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Freelancer</title>
-	<!-- Enlaza aquí tu CSS común y de tu proyecto -->
-
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/common.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<body>
-	<!-- Escribe tu código aquí -->
 
-	<!-- Enlaza aquí tu archivo JS -->
-	
+<body>
+
+	<!-- NAV -->
+	<header class="menu container">
+		<div class="logo">
+			<h2>START BOOTSTRAP</h2>
+		</div>	
+		<div class="links-menu">
+			<ul>
+				<li><a href="#" class="link">PORTFOLIO</a></li>
+				<li><a href="#" class="link">ABOUT</a></li>
+				<li><a href="#" class="link">CONTACT</a></li>
+			</ul>
+		</div>		
+	</header>
+
+	<!-- FONDO START BOOTSTRAP -->
+	<section class="banner">
+		<div class="div-info">
+			<img src="assets/images/profile.png" alt="Profile">
+			<h1>START BOOTSTRAP</h1>
+			<i class="fa fa-star" aria-hidden="true"></i>
+			<p>Web Developer - Graphic Artist - User Experience Designer</p>
+		</div>
+	</section>
+
+	<!-- PORTAFOLIO -->
+	<section class="portafolio">
+		<div class="container titulo-portafolio">
+			<h1 class="text-uppercase text-services mt-0">PORTAFOLIO</h1>
+		</div>
+		<div class="row container portafolio-row"> 
+			<div class="col-4"><img src="assets/images/portfolio/cabin.png" class="img-responsive" alt="cabin"></div>
+			<div class="col-4"><img src="assets/images/portfolio/cake.png" class="img-responsive" alt="cake"></div>	
+			<div class="col-4"><img src="assets/images/portfolio/circus.png" class="img-responsive" alt="circus"></div>			
+		</div>
+
+		<div class="row container portafolio-row">
+			<div class="col-4"><img src="assets/images/portfolio/game.png" class="img-responsive" alt="game"></div>
+			<div class="col-4"><img src="assets/images/portfolio/safe.png" class="img-responsive" alt="safe"></div>	
+			<div class="col-4"><img src="assets/images/portfolio/submarine.png" class="img-responsive" alt="submarine"></div>	
+		</div>
+	</section>
+
+	<!-- ABOUT -->
+	<section class="about">
+		<div class="div-about">
+			<h1>ABOUT</h1>
+			<i class="fa fa-star" aria-hidden="true"></i>
+			<div class="about-texto">
+				<div class="col-6">
+					<p>Freelancer is a free bootstrap theme crated by Strart Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization</p>
+				</div>
+				<div class="col-6">
+					<p>Whether you`re a student looking to showcase your work, a professional looking to attact clients, or a graphic artist looking to share your projects, this template is the perfect staring point!</p>
+				</div>	
+				<div class="boton-about">
+					<a href="#"><i class="fa fa-download" aria-hidden="true"></i>Download Theme</a>
+				</div>	
+			</div>
+		</div>
+	</section>	
+
+	<!-- CONTACT ME -->
+	<section class="contact">
+		<div class="div-contact">
+			<h1>CONTACT ME</h1>
+			<i class="fa fa-star" aria-hidden="true"></i>
+			<div class="contact-form">
+				<form action="">
+					<input type="text" id="name" placeholder="Name">
+					<input type="text" id="email" placeholder="Email Address">
+					<input type="text" id="phone" placeholder="Phone Number">
+					<input type="text" id="message" placeholder="Message" >
+				</form>				
+			</div>
+		</div>
+	</section>
+
+<script src="https://use.fontawesome.com/4154d90246.js"></script>
+<script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
