He agregado el botón de enviar en el formulario de contacto y el footer, falta corregir algunos errores en el diseño CSS y desarrollar funcionalidades.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="div-info">
 			<img src="assets/images/profile.png" alt="Profile">
 			<h1>START BOOTSTRAP</h1>
-			<i class="fa fa-star" aria-hidden="true"></i>
+			<hr class="linea"></hr><i class="fa fa-star fa-2x" aria-hidden="true"></i><hr class="linea"></hr>
 			<p>Web Developer - Graphic Artist - User Experience Designer</p>
 		</div>
 	</section>
@@ -37,7 +37,8 @@
 	<!-- PORTAFOLIO -->
 	<section class="portafolio">
 		<div class="container titulo-portafolio">
-			<h1 class="text-uppercase text-services mt-0">PORTAFOLIO</h1>
+			<h1>PORTAFOLIO</h1>
+			<hr class="linea-black"></hr><i class="fa fa-star" aria-hidden="true"></i><hr class="linea-black"></hr>
 		</div>
 		<div class="row container portafolio-row"> 
 			<div class="col-4"><img src="assets/images/portfolio/cabin.png" class="img-responsive" alt="cabin"></div>
@@ -56,7 +57,7 @@
 	<section class="about">
 		<div class="div-about">
 			<h1>ABOUT</h1>
-			<i class="fa fa-star" aria-hidden="true"></i>
+			<hr class="linea"></hr><i class="fa fa-star fa-2x" aria-hidden="true"></i><hr class="linea"></hr>
 			<div class="about-texto">
 				<div class="col-6">
 					<p>Freelancer is a free bootstrap theme crated by Strart Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization</p>
@@ -75,17 +76,69 @@
 	<section class="contact">
 		<div class="div-contact">
 			<h1>CONTACT ME</h1>
-			<i class="fa fa-star" aria-hidden="true"></i>
+			<hr class="linea-black"></hr><i class="fa fa-star fa-2x" aria-hidden="true"></i><hr class="linea-black"></hr>
 			<div class="contact-form">
 				<form action="">
 					<input type="text" id="name" placeholder="Name">
 					<input type="text" id="email" placeholder="Email Address">
 					<input type="text" id="phone" placeholder="Phone Number">
-					<input type="text" id="message" placeholder="Message" >
-				</form>				
+					<input type="text" id="message" placeholder="Message">
+				 <div class="row">
+                        <div class="form-group col-12">
+                            <button type="submit" class="btn btn-success btn-lg">Send</button>
+                        </div>
+                </div>
+				</form>
 			</div>
-		</div>
 	</section>
+
+	<!-- FOOTER -->
+    <footer class="text-center">
+        <div class="footer-above">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-4">
+                        <h3>LOCATION</h3>
+                        <p>3481 Melrose Place
+                            <br>Beverly Hills, CA 90210</p>
+                    </div>
+                    <div class="footer-col col-4">
+                        <h3>AROUND THE WEB</h3>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-col2 col-4">
+                        <h3>ABOUT FREELANCER</h3>
+                        <p>Freelance is a free to use, open source <br> Bootstrap theme created by <a class="link" href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-below">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        Copyright &copy; Your Website 2017
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 <script src="https://use.fontawesome.com/4154d90246.js"></script>
 <script src="js/app.js" type="text/javascript"></script>
